Set height to avoid stretch

--- a/src/styl/structure/header/desktop.styl
+++ b/src/styl/structure/header/desktop.styl
@@ -35,6 +35,7 @@
   .custom-logo-link {
     img {
       max-width: r(200px)
+      height: auto
     }
   }
 
